--- a/enriquekesslerm.com/content/100daysofgatsby-log.org
+++ b/enriquekesslerm.com/content/100daysofgatsby-log.org
@@ -1,4 +1,4 @@
-#+TITLE: 100DaysOfGatsby log
+#+TITLE: 100DaysOfGatsby
 #+DATE: <2021-03-24 Wen>
 #+SUMMARY: Starting the journey! This is the post where I keep all my progress on the 100DaysOfGatsby challenge.
 
