--- a/enriquekesslerm.com/content/emacs-for-writers.org
+++ b/enriquekesslerm.com/content/emacs-for-writers.org
@@ -1,6 +1,7 @@
 #+TITLE: Writing in Emacs
 #+DATE: <2021-04-07 Tue>
 #+CATEGORY: emacs
+#+TAGS: development software
 #+SUMMARY: Emacs, as the amazing-operating-system-disguised-as-an-editor that it is, it holds several modes that are interesting for writing from blog posts, articles, and everything that comes to mind.
 #+IMAGE: ./images/andrew-neel-cckf4TsHAuw-unsplash.jpg
 
