Some changes using lsp-grammarly

--- a/content/range-david-epstein.org
+++ b/content/range-david-epstein.org
@@ -5,7 +5,7 @@
 #+SUMMARY: Range is one of the latest books from David Epstein, Range is one of the latest books from David Epstein, who is commonly known by giving TED talks about performance science and most recently psychology and specialization in today's world.
 #+IMAGE: ./images/813FFNCfnjL.jpg
 
-Range is one of the latest books from David Epstein, who is commonly known by
+Range is one of the latest books by David Epstein, who is commonly known by
 giving TED talks about performance science and most recently psychology and
 specialization in today's world.
 
@@ -23,18 +23,18 @@ After years of research, we know that these cases are the extreme. Most people
 that reach a certain level of "success" —What is success anyway? In my book
 success is fulfillment by having the inner need of doing things right, according
 to your values and the societal measures that you have been breeding over the
-years— have done so by changing their path multiple times, and benefiting from
+years— have done so by changing their path multiple times, benefiting from
 the switching process. These people —again, the majority— are called the
 Generalists.
 
 * Learning environments
-  When learning, there are multiple environments that propel or bring down
-  learning. We can classify these in *kind* and wicked environments. The first are
-  the ones on which most of the celebrity performers thrive, as they are the ones
-  that can benefit from hours of practice. Some examples are chess, golf...
+  When learning, having a supporting environment is key. We can classify these
+  in *kind* and wicked environments. The first are the ones on which most of the
+  celebrity performers thrive, as they are the ones that can benefit from hours
+  of practice. Some examples are chess, golf and more.
 
   On the other side, *wicked* environments are the ones that no longer benefit from
-  experience, hence drawing on the big picture that us humans are able to bring to
+  experience, hence drawing on the big picture that humans are able to bring to
   the topics. A.I is able to infer tactics for kind environments, and they are
   already good enough to beat humans at it. In order to beat the computer, our
   best bet is outsource tactics —strategies inferred after years of experience—
@@ -52,13 +52,14 @@ Generalists.
   By creating a *wicked* learning environment, the latter are able to ensure
   that the students create the connections necessary to long term learning and
   memory. These making connection problems could also be called "Fermi
-  Problems". An example of these Fermi problems (see [[https://es.wikipedia.org/wiki/Enrico_Fermi][Enrico Fermi]]) could be:
+  Problems". An example of these Fermi problems (see [[https://es.wikipedia.org/wiki/Enrico_Fermi][Enrico Fermi]], he is a
+  pretty cool guy) could be:
   #+begin_quote
   How many windows get cleaned each day in New York?
   #+end_quote
   The idea is that using some of the common knowledge information, i.e the
   number of people per house, or average windows per house or apartment, get an
-  answer that gives an insight in our broader thinking.
+  answer that gives an insight on our broader thinking.
 
 * Analogical thinking
   Kepler has been famous to have thought about problems, both common and complex
@@ -119,13 +120,13 @@ Generalists.
 
 * Conclusion
   I ended up enjoying the book —I find the topic to be mesmerizing— but I did
-  find it to be cumbersome to get through. Even though David is able to effectively
-  summarize the information, there are countless pages of data that is not really
+  find it to be cumbersome to get through. Even though David succeeds at effectively
+  summarizing the information, there are countless pages are not really that
   interesting.
 
   On the other hand, the topic of the book is one that we can benefit from these
   days, considering the push for specialization that we are seeing in the
   industry world. Maybe it is not a bad book to keep your mind fresh on the
-  topic, to avoid falling in the pitfalls he mentions.
+  topic, to avoid falling on the pitfalls he mentions.
 
-  "I would recommend score": 6/10.
+  "I would recommend score": =6/10=.
