--- a/README.org
+++ b/README.org
@@ -22,7 +22,7 @@ designing the website, thank you so much!
     as crisp as a mobile app while having all the advantages that the web still
     offers, considering how young the mobile world is.
 
-    [[./images/gatsby-index.png]]
+    [[./content/images/gatsby-index.png]]
    
     Gatsby provides extensive docs, and has a joyful community behind, trying to
     make the web better one step at a time. Without reinventing the wheel, you
@@ -56,11 +56,11 @@ designing the website, thank you so much!
  :DATE: <2021-04-12 lun>
  :CATEGORY: Projects
  :SUMMARY: Personal web used to showcase myself and collect my writings and ideas in one spot.
- :IMAGE: ./images/danielle-macinnes-IuLgi9PWETU-unsplash.jpg
+ :IMAGE: ./content/images/danielle-macinnes-IuLgi9PWETU-unsplash.jpg
  :END:
 
  The enriquekesslerm.com project started as a placeholder for learning Gatsby,
- entangled in the [[/100daysofgatsby-log][100 Days Of Gatsby]] experience. Built with Gatsby —easily
+ entangled in the [[file:content/100daysofgatsby-log.org][100 Days Of Gatsby]] experience. Built with Gatsby —easily
  industry-accepted the best framework for lightning fast websites—, the site has
     #+end_src
 
@@ -176,7 +176,7 @@ designing the website, thank you so much!
 
      The end result is pretty cool! I can search by 'title', 'tags' and 'category'.
 
-     [[./images/search-enriquekesslerm.png]]
+     [[./content/images/search-enriquekesslerm.png]]
 
 *** Categories and tags📁
      Each of the blog posts has additional metadata that can be added using either
@@ -209,8 +209,8 @@ designing the website, thank you so much!
      created for each of them (dynamically when they are defined in the blog
      posts)
 
-     [[./images/category-enriquekesslerm.png][Projects category]]
-     [[file:images/tags-enriquekesslerm.png][Software tag]]
+     [[./content/images/category-enriquekesslerm.png][Projects category]]
+     [[./content/images/tags-enriquekesslerm.png][Software tag]]
     
 *** Travel map
     One of the ideas that I took from [[https://leerob.io][Lee's blog]] is to add a travel-map. I didn't
@@ -260,7 +260,7 @@ designing the website, thank you so much!
     their own /constants file) and add them to the map, with their descriptions and
     custom CSS popups.
 
-    [[./images/travelmap-enriquekesslerm.png]]
+    [[./content/images/travelmap-enriquekesslerm.png]]
 
 *** Moving rainbow text
     As part of the initial look that I wanted to infuse the website,
@@ -271,5 +271,6 @@ designing the website, thank you so much!
     for some text. The end result has pretty clean code and it works for
     most of the browsers ([[https://css-houdini.rocks/][CSS Houdini]] is still not fully supported).
 
-    [[./images/gradient-name.gif]]
+    [[./content/images/gradient-name.gif]]
+
 
