Trying to add inline image on the top of the readme file

--- a/README.org
+++ b/README.org
@@ -1,3 +1,5 @@
+[[./content/images/enriquekesslerm.png]]
+
 * [[https://enriquekesslerm.com][enriquekesslerm.com]]
 
 My personal web is officially out and running! 
