Adding table of contents

--- a/README.org
+++ b/README.org
@@ -17,6 +17,15 @@ designing the website, thank you so much!
 - Lee Robinson's [[https://leerob.io][leerob.io]]
 - François Best's [[https://francoisbest.com/][francoisbest.com]]
 
+** Table of Contents :TOC:QUOTE:
+#+BEGIN_QUOTE
+- [[#enriquekesslermcom][enriquekesslerm.com]]
+  - [[#why-gatsby][Why Gatsby?]]
+  - [[#where-is-the-content-coming-from][Where is the content coming from?]]
+  - [[#structure][Structure]]
+  - [[#features][Features]]
+#+END_QUOTE
+
 ** Why [[https://www.gatsbyjs.com/][Gatsby]]?
     Gatsby is a React framework, so you will have to live with that it is built
     in JavaScript. On the other side, Gatsby compensates by pre-fetching data and
